# functional_cpp

./: .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  chapter2.cpp  chapter3_1.cpp  chapter3_2.cpp
chapter12/: CMakeLists.txt  reactive_stream1.cpp
chapter12/include/fcpp/: expected_utils.h  filter.h  join.h  macros.h  mtry.h  sink.h  source.h  traits.h  transform.h  values.h
